# proxy-accesslist

./: .gitignore  .swp  Jenkinsfile  PULL_REQUEST_TEMPLATE.md  README.md  blacklist  denylist  dsgsdgsd  folder_test.py  pyproject.toml  setup.cfg  test.sh  test_foldercheck.py
.github/workflows/: merge.yaml  notify.yaml  syntaxcheck.yaml
ark/nonprod/: domains-whitelist
ark/prod/: domains-whitelist
au/nonprod/: domains-allowlist  domains-whitelist
au/prod/: domains-allowlist  domains-whitelist  ips-allowlist  ips-whitelist
avi/nonprod/: domains-whitelist
avi/prod/: domains-whitelist
bt/nonprod/: domains-allowlist  ips-allowlist
bt/prod/: domains-allowlist  domains-whitelist  ips-allowlist  ips-whitelist
c5/nonprod/: domains-whitelist  ips-whitelist
c5/prod/: domains-whitelist
ca/nonprod/: domains-allowlist  domains-whitelist  ips-allowlist  ips-whitelist
ca/prod/: domains-allowlist  domains-whitelist  ips-allowlist  ips-whitelist
cd/nonprod/: domains-allowlist  domains-whitelist  ips-allowlist
cd/odin-dev/: domains-whitelist
cd/prod/: domains-allowlist  domains-whitelist  ips-allowlist
ci/nonprod/: domains-whitelist
ci/prod/: domains-whitelist
cloud/nonprod/: domains-allowlist  domains-whitelist  ips-whitelist
cloud/prod/: domains-allowlist  domains-whitelist
cms/nonprod/: domains-allowlist  domains-whitelist
cms/prod/: domains-allowlist  domains-whitelist
comaas/nonprod/: domains-allowlist  domains-whitelist  ips-allowlist
comaas/prod/: domains-allowlist  (+1 more)
foldercheck/: foldertest.py
tests/: test_foldercheck.py
(+143 files in other folders)
