[tool.poetry]
name = "proxy-accesslist"
version = "0.1.0"
description = ""
authors = ["gdelaney <gdelaney@ebay.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-coverage = "^0.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 90
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = [
    "./",
]
omit = [
    "*/tests/*"
]

[tool.isort]
length_sort = false
from_first = false
combine_as_imports = false
line_length = 99
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]